tests/snapshots/wallets/create/already_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - create
    - wallet
    - "1234"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Cannot create encrypted file at /alephium-home/.alephium-wallets
