tests/snapshots/wallets/create/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - create
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <PASSWORD>

Usage: kermit wallets create <WALLET_NAME> <PASSWORD>

For more information, try '--help'.
